<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tecinfo.calculadora.MainActivity">

    <TextView
        android:id="@+id/displayConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="500+500"
        android:textColor="@android:color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayResultado"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="1000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayConta" />

    <LinearLayout
        android:layout_width="85dp"
        android:layout_height="357dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="#434345"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/btn_C" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/btn_S" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/btn_M" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/btn_dv" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/btn_vzs" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="283dp"
        android:layout_height="357dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="#bcbcbc"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_." />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_zero" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_ig" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
